deployment/Service__v1_workshop-zach_mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: mongodb
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: mongodb
  name: mongodb
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 27017-tcp
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    deployment: mongodb
  sessionAffinity: None
  type: ClusterIP
