deployment/Service__v1_workshop-zach_rating-web.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: rating-web
    app.kubernetes.io/component: rating-web
    app.kubernetes.io/instance: rating-web
  name: rating-web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: rating-web
  sessionAffinity: None
  type: ClusterIP
