deployment/Route_route.openshift.io_v1_workshop-zach_rating-web.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rating-web
  labels:
    app: rating-web
    app.kubernetes.io/component: rating-web
    app.kubernetes.io/instance: rating-web
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: rating-web
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
